# IncidentLens

./: .env.example  .gitignore  DESIGN.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt  vercel.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_complete_production_schema.py  0003_operational_control_plane.py  0004_structured_reports.py  0005_durable_jobs.py  0006_user_sessions.py
apps/api/app/: main.py
apps/api/app/agents/: __init__.py  base.py  evaluation_agent.py  intake_agent.py  orchestrator.py  remediation_agent.py  report_builder.py  retrieval_agent.py  root_cause_agent.py  state.py  tool_execution_agent.py
apps/api/app/api/: deps.py
apps/api/app/core/: config.py  logging.py  security.py
apps/api/app/db/: base.py  schema_compat.py  session.py
apps/api/app/evals/: __init__.py  runner.py
apps/api/app/integrations/: __init__.py  service.py
apps/api/app/jobs/: service.py  worker.py
apps/api/app/models/: auth.py  evidence.py  incident.py  investigation.py  jobs.py  operations.py
apps/api/app/rag/: chunker.py  embeddings.py  retriever.py
apps/api/app/schemas/: auth.py  common.py  evals.py  evidence.py  incident.py  integration.py  investigation.py  jobs.py  llmops.py  operations.py  retrieval.py
apps/api/app/seed/: demo.py
apps/api/app/services/: auth_service.py  (+10 more)
apps/api/tests/: conftest.py  test_auth.py  test_incident_crud.py  test_jobs.py  test_multimodal.py  test_operations.py  test_security.py
(+102 files in other folders)
