[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incidentlens-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.0",
  "alembic>=1.13.0",
  "pgvector>=0.3.0",
  "pypdf>=5.0.0",
  "httpx>=0.27.0",
  "PyYAML>=6.0.2",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.vercel]
entrypoint = "app.main:app"
